
Any uppercase BUG_* names are modernish shell bug IDs.

2022-06-18:

- Fixed a bug where, with the monitor or pipefail option on, the shell
  failed to wait for all component commands in a pipeline to terminate if
  the last component command was an external command and the pipeline was
  the last command in a background subshell.

2022-06-15:

- Fixed a bug where converting an indexed array into an associative array in
  a subshell failed, resulting in an empty associative array.

2022-06-13:

- Trapping a signal that is not a pseudosignal will now cause a virtual
  subshell to fork into a real one. This ensures a persistent PID where
  other processes can signal the subshell (the PID of a virtual subshell may
  change as other commands cause it to fork), and fixes a bug where a signal
  could not be correctly or effectively trapped in a subshell if the same
  signal was also trapped in the main shell environment.

2022-06-12:

- The POSIX mode now disables zero-padding of seconds in 'time'/'times' output.

2022-06-09:

- The POSIX mode has been amended to use a UNIX pipe(2) instead of a
  socketpair(2) to connect commands in a pipeline, as the standard requires.
  (When reading directly from a pipeline in posix mode, the <#pattern and
  <##pattern redirection operators will not work and the -n option to the
  read built-in will not return early when reading from a slow device.)

- An interactive shell initialized in POSIX mode now once again has the
  preset aliases defined. This amends a change made on 2020-09-11.

- If a long-form shell option name is abbreviated so it matches multiple
  options, the error message from ksh or 'set' now reads "ambiguous option".

2022-06-08:

- If -B/--braceexpand is turned on in --posix mode, it now only allows brace
  expansion on literal strings and not on the values of unquoted expansions.
  This behaviour is like bash and zsh, as well as compliant with a future